Thu Jun 25 06:25:49 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* enum.c (first_i): wrong condition for no argument #first.
	  [ruby-core:24017]

Wed Jun 24 15:02:29 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_set_encode): show the erred file name instead of
	  the file that requires it.  [ruby-core:24006]

Mon Jun 22 16:14:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_set_arguments, iseq_compile_each): internal
	  arrays must be hidden.  [ruby-dev:38613]

	* vm.c (Init_top_self): ditto.

Tue Jun 23 01:17:38 2009  Tanaka Akira  <akr@fsij.org>

	* ruby.c (process_options): don't specify .so for encdb here.
	  "." is replaced by "_" in load_encoding.

	* encoding.c (load_encoding): add .so here. 

Mon Jun 22 14:41:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (process_options), enc/prelude.rb: encdb and transdb are
	  extension libraries.

	* ruby.c (process_options): set progname earlier.

Sun Jun 21 22:33:05 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* load.c (Init_load): $: must be readonly.  [ruby-dev:38690]

	* ruby.c (ruby_prog_init): $-W must be readonly.  [ruby-dev:38691]

Sun Jun 21 10:47:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::Entry_#copy_file): open with
	  default umask.  [ruby-core:23952]

Sun Jun 21 10:46:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* transcode.c (enc_arg): default interanl encoding may not be set.
	  [ruby-core:23932]

Sat Jun 20 07:17:52 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/monitor.rb (MonitorMixin::extend_object): should use
	  #__send__ instead of #send to avoid possible name conflict.  
	  [ruby-core:23907]

Fri Jun 19 20:53:54 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* encoding.c (rb_enc_name_list): update RDoc.  [ruby-core:23926]

Fri Jun 19 20:44:45 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: constant COMPLEX_NAME has been removed.

	* rational.c: constant RATIONAL_NAME has been removed.
